--- a/19 - Nesting Grid with Album Layouts/albums-START.html
+++ b/19 - Nesting Grid with Album Layouts/albums-START.html
@@ -20,14 +20,7 @@
         <p class="album__desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis, excepturi!</p>
       </div>
     </div>
-    <div class="album">
-      <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=2">
-      <div class="album__details">
-        <h2>Album Title</h2>
-        <p class="album__artist">Artist Name</p>
-        <p class="album__desc">short.</p>
-      </div>
-    </div>
+    
     <div class="album">
       <img class="album__artwork" src="https://source.unsplash.com/random/300x300?v=3">
       <div class="album__details">
@@ -97,6 +90,27 @@
 
 
   <style>
+
+    img {
+      width: 150px;
+      height: 150px;
+    }
+
+    .albums {
+      display: grid;
+      grid-gap: 10px;
+      grid-template-columns: repeat(auto-fill, minmax(300px, auto))
+      
+    }
+
+    .album {
+      display: grid;
+      grid-gap: 20px;
+      grid-template-columns: 1fr auto;
+      background: rgba(0, 0, 0, 0.3);
+      padding: 10px;
+      place-items: center center;
+    }
   </style>
 </body>
 
