--- a/20 - CSS Grid Image Gallery/image-gallery-START.html
+++ b/20 - CSS Grid Image Gallery/image-gallery-START.html
@@ -1,88 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>CSS Grid Image Gallery!</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>CSS Grid Image Gallery!</title>
-</head>
-
-<body>
-
-  <div class="overlay">
-    <div class="overlay-inner">
-      <button class="close">× Close</button>
-      <img>
+  <body>
+    <div class="overlay">
+      <div class="overlay-inner">
+        <button class="close">× Close</button>
+        <img />
+      </div>
     </div>
-  </div>
 
-  <section class="gallery">
-  </section>
+    <section class="gallery"></section>
 
+    <style>
+      * {
+        box-sizing: border-box;
+      }
 
-  <style>
-    * {
-      box-sizing: border-box;
-    }
+      body {
+        padding: 50px;
+        font-family: sans-serif;
+        background: linear-gradient(to right, #f93d66, #6d47d9);
+      }
 
-    body {
-      padding: 50px;
-      font-family: sans-serif;
-      background: linear-gradient(to right, #F93D66, #6D47D9);
-    }
+      h1,
+      h2,
+      h3,
+      h4,
+      h5,
+      h6 {
+        margin: 0 0 5px 0;
+      }
 
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-      margin: 0 0 5px 0;
-    }
+      p {
+        margin: 0 0 20px 0;
+      }
 
-    p {
-      margin: 0 0 20px 0;
-    }
+      .close {
+        background: none;
+        color: black;
+        border: 0;
+      }
 
-    .close {
-      background: none;
-      color: white;
-      border: 0;
-    }
+      .gallery {
+      }
 
-    .gallery {}
+      .overlay {
+        position: fixed;
+        background: rgba(0, 0, 0, 0.7);
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        display: none;
+        z-index: 2;
+      }
 
+      .overlay.open {
+        display: grid;
+        place-items: center center;
+      }
 
+      .overlay .overlay-inner {
+        background: white;
+        width: 700px;
+        padding: 20px;
+      }
 
-    .overlay {
-      position: fixed;
-      background: rgba(0, 0, 0, 0.7);
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      display: none;
-      z-index: 2;
-    }
+      .overlay img {
+        width: 100%;
+      }
 
-    .overlay.open {
-      display: grid;
-    }
+      .gallery {
+        display: grid;
+        grid-template-columns: repeat(auto-fill, 100px);
+        grid-auto-rows: 100px;
+        grid-auto-flow: dense;
+      }
 
-    .overlay figure {
-      background: white;
-      width: 700px;
-      padding: 20px;
-    }
+      .item {
+        display: grid;
+        grid-template-columns: 1;
+        grid-template-rows: 1;
+        overflow: hidden;
+      }
 
-    .overlay img {
-      width: 100%;
-    }
-  </style>
+      .item img {
+        grid-column: 1 / -1;
+        grid-row: 1 / -1;
+        width: 100%;
+        height: 100%;
+        object-fit: cover; /* to prevent img squizing */
+      }
 
-  <script>
-  </script>
-</body>
+      .item__overlay {
+        background: #ffc60032;
+        grid-column: 1 / -1;
+        grid-row: 1 / -1;
+        display: grid;
+        place-items: center center;
+        transform: translateY(100%);
+        transition: 0.3s;
+      }
 
+      .item:hover .item__overlay {
+        transform: translateY(0%);
+      }
+
+      button {
+        background: transparent;
+      }
+
+      .v2 {
+        grid-column: span 2;
+      }
+
+      .v3 {
+        grid-column: span 3;
+      }
+
+      .v4 {
+        grid-column: span 4;
+      }
+
+      .h2 {
+        grid-row: span 2;
+      }
+
+      .h3 {
+        grid-row: span 3;
+      }
+
+      .h4 {
+        grid-row: span 4;
+      }
+    </style>
+
+    <script>
+      const gallery = document.querySelector(".gallery");
+      const overlay = document.querySelector(".overlay");
+      const overlayClose = document.querySelector(".close");
+      const overlayImg = document.querySelector("img");
+
+      function generateHTML([v, h]) {
+        return `
+        <div class="item v${v} h${h}">
+          <img src="images/${randomNumber(11)}.jpg">
+          <div class="item__overlay">
+            <button> View -> </button>
+          </div>
+        </div>
+      `;
+      }
+
+      function randomNumber(limit) {
+        return Math.ceil(Math.random() * limit);
+      }
+
+      let items = Array.from({ length: 50 }, () => {
+        return [randomNumber(4), randomNumber(4)];
+      }).concat(
+        Array.from({ length: 25 }, () => {
+          return [1, 1];
+        })
+      );
+
+      generateHTML(items);
+      gallery.innerHTML = items
+        .map(item => {
+          return generateHTML(item);
+        })
+        .join("");
+
+      function handleClick(e) {
+        const src = e.currentTarget.querySelector("img").src;
+        overlayImg.src = src;
+        overlay.classList.add("open");
+      }
+
+      function close() {
+        overlay.classList.remove("open");
+      }
+
+      let photos = document.querySelectorAll(".item").forEach(it => {
+        it.addEventListener("click", handleClick);
+      });
+
+      overlayClose.addEventListener("click", close);
+    </script>
+  </body>
 </html>
